# pyfemtet

./: .gitattribute  .gitignore  .readthedocs.yaml  ACKNOWLEDGEMENTS.txt  LICENSE  LICENSE_THIRD_PARTY.txt  NX_FEMTETテスト.py  README.html  README.md  TEST_femprj.bas  Thrid-Party-Nortice.md  autobuild.bat  pyfemtet-installer-jp.ps1  pyfemtet-installer.ps1  pyproject.toml  pytest_NoFEM.bat  ruff.toml  update_apidoc.bat
.docs/: .gitignore  LICENSE.rst  api.rst  autobuild.bat  bmpから透過pngを作る.bat  bmpから透過pngを作る（日本語不可）.py  build.bat  conf.py  examples.rst  index.rst  make.bat  usage.md  usage.rst
.docs/NX_ex01/: NX_ex01.rst
.docs/files/: opt_sample.femprj
.docs/gal_ex11/: gal_ex11.rst
.docs/gau_ex08/: gau_ex08.rst  gau_ex08_parametric.femprj  gau_ex08_parametric.py
.docs/her_ex40/: her_ex40.rst
.docs/pages/: LICENSE.rst  api.rst  examples.rst
.docs/wat_ex14/: wat_ex14.rst
.docs/wat_ex14_parallel/: wat_ex14_parallel.rst
.github/workflows/: python-poetry-publish-testpypi.yml  python-poetry-publish.yml  python-publish.yml  win-sphinx.yml
.run/: femprj sample pytest (no CAD).run.xml  femprj sample pytest.run.xml  module pytest.run.xml  test-run-automated -lf.run.xml  test-run-automated.run.xml  test-run-lightweight -lf.run.xml  test-run-lightweight.run.xml  test-run-manually.run.xml
_pyfemtet/: _warning.py  core.py
_pyfemtet/_femtet_config_util/: autosave.py
_pyfemtet/_message/: babel.cfg
_pyfemtet/brep/: _impl.py
_pyfemtet/logger/: _impl.py
_pyfemtet/opt/: __init__.py  _femopt.py
benchmark/: cec2021_19_multi_product_batch_plant.py  cec2021_1_pressure_vessel.py  common.py  distance_on_hyper_sphere.py  distances_on_hypercube.py  mkfig.py
dash_application/: __init__.py  base_application.py  base_application.pyi  utils.py
dash_application/components/: alert_region.py  button_with_spinner.py  flexbox_graph.py
docs/: .gitattribute  PyFemtet.opt.rst  PyFemtet.rst  PyFemtet.tools.rst  api.rst  autobuild.ps1  check_change.bat  conf.py  index.html  index.rst  japanize.ps1  pre-build.ps1  requirements.txt  rest_example.rst  result.txt  update-apidoc.ps1  update-git.ps1
docs/gettext/: advanced_examples.pot  examples.pot  index.pot  modules.pot  pages.pot
docs/installer/: pyfemtet-installer-jp.ps1  pyfemtet-installer.ps1
docs/source/: .gitignore  conf.py  index.rst  ps1-launcher.bat  pyfemtet-installer-runner.bat  pyfemtet-installer.ps1  pyfemtet-installer.ps1 should be copied here
docs_tools/: googe_style_docstring.py  license_check.ps1
docs_tools/translate/: .poファイルの未翻訳をピックアップして翻訳を提案.py  util.py  クリップボードの文字列を日本語に翻訳.py  クリップボードの文字列を英語に翻訳.py
elemental/: dash_test.py  dash_test1.py  dash_test2.py  dash_test3.py  dash_test4.py  dash_test5.py  ray1.py  ray2.py  ray3.py  sampler_random_seed.py  sampler_random_seed2.py  sampler_random_seed3.py  sampler_random_seed4.py  sampler_random_seed5.py  sampler_random_seed6.py
excel_ui/: pyfemtet-core.py  test-pyfemtet-core.cmd  インターフェース.xlsm  プロジェクト.bas  プロジェクト.femprj
hc/: BoTorchSampler_reimplementation.py  __init__.py  _reimplementation_botorch_sampelr.py
hc/problem/: _base.py  hyper_sphere.py  spiral.py  spots_in_square.py
hc/sampler/: ____tmp.py  ___tmp.py  __tmp.py  _base.py  _tmp.py  bo.py  bo_pof.py  bo_pof_class.py  bo_pof_constraints.py  random.py
hc/scripts/: run_bo.py  run_bo_pof.py  run_bo_pof_class.py
minimum/: __init__.py  _optuna.py  base.py  core.py  dispatch_extension.py  fem.py  monitor.py  opt.py
minimum/minimum_test/: test_optuna1.py  test_optuna2.py
minimum/minimum_tests/: test1.femprj  test1.py
pyfemtet/: FEMIF.py  __init__.py  __version__.py  _core.py  _imports.py  _optuna.py  _test_util.py  _warning.py  core.py  dispatch_extensions.py  interface.py  logger.py  monitor.py  opt.py
pyfemtet/FemtetPJTSample/: _her_ex40_parametric.py  fem4 = Femtet(femprj_path=None, model_name=None, connect_method='catch').femprj  gal_ex11_parametric.femprj  gal_ex11_parametric.py  gau_ex08_parametric.py  her_ex40_parametric.femprj  her_ex40_parametric.py  pas_ex1_parametric.femprj  pas_ex1_parametric.py  wat_ex14_parallel_parametric.py  wat_ex14_parametric.femprj  wat_ex14_parametric.py
pyfemtet/PyFemtet/: __init__.py
pyfemtet/_femtet_config_util/: autosave.py  exit.py
pyfemtet/_i18n/: 1. make_pot_and_update_po.bat  2. build_mo.bat  __init__.py  babel.cfg  i18n.py  messages.py
pyfemtet/_message/: 1. make_pot.bat  2. make_mo.bat  __init__.py  babel.cfg  messages.py
pyfemtet/_opt/: _FemtetScipy.py  core.py  update_model_parameter.py
pyfemtet/_util/: atmark_support_for_param_name.py  closing.py  dask_util.py  df_util.py  excel_macro_util.py  excel_parse_util.py  femtet_access_inspection.py  femtet_autosave.py  femtet_exit.py  femtet_version.py  helper.py  process_util.py  sample.xlsx  solidworks_variable.py  (+1 more)
surrogate_model/: gal_ex13_optimize_with_surrogate.py  gal_ex13_parametric.femprj
test_util/: test_util.py
test_utils/: record_history.py
tests/: 1_test_interface.py  2023_12_22_23_13_11.db-journal  2024_01_10_13_36_48.db-journal  2_optuna_NoFEM.py  3.1_picklable.py  3.2_picklable.py  3_simple_femtet.py  5_restart_NoFEM.py  FEMError.py  NX_Femtet_with_process_monitor.py  SW_Femtet_dev.py  SW_Femtet_with_process_monitor.py  __init__.py  conftest.py  hypervolume_monitor.py  import_test.py  new_test_interface.py  optuna_lhs.py  pytest - tmp - 2.bat  pytest - tmp.bat  pytest--lf.bat  pytest.bat  pytest_NoFEM.bat  random_set_seed.py  run_package_test.bat  selection_multiobjective.py  simple_femtet.py  strict_constraint.py  test2_NoFEM.py  test_1.py  test_1_dispatch.py  test_1_interface.py  test_2_NoFEM.py  test_3_withNX.py  test_multipairplot.py  test_optuna1.py  test_sample.ps1  use_femtetutils.py
tools/: dev-end.cmd  dev-start.cmd  notify.cmd  release.cmd  test-end.cmd  test-run-automated.cmd  test-run-lightweight.cmd  test-run-manually.cmd  test-start.cmd
v1/: dask_util.py  exceptions.py  femopt.py  helper.py  history.py  hypervolume.py  interface.py  monitor.py  optimality.py  optimizer.py  problem.py  skelton.py  str_enum.py  variable_manager.py  worker_status.py
(+1323 files in other folders)
