[tool.poetry]
name = "pyfemtet"
version = "0.1.0"  # ignored by versioning plugin
description = "Design parameter optimization using Femtet."
authors = ["kazuma.naito <kazuma.naito@murata.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/pyfemtet/pyfemtet"

[tool.poetry.dependencies]
# core
python = " >= 3.9.3, < 3.13"
babel = "^2.15.0"
tqdm = "^4.66.1"
colorlog = "^6.8.0"
psutil = "^5.9.6"
# win32 / Femtet
pywin32 = "^306"
femtetutils = "^1.0.0"
# distributed
dask = "^2023.12.1"
distributed = "^2023.12.1"
# ui
dash = "^2.17.0"
plotly = "^5.22.0"
dash-bootstrap-components = "^1.5.0"
# numerical
numpy = ">=1.26.2, <2.0.0"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
scipy = "^1.11.4"
optuna = "^3.4.0"
optuna-integration = "^3.6.0"
botorch = "==0.9.5"
torch = "~2.3.0"

[tool.poetry.group.dev.dependencies]
# license
pip-licenses = "^4.3.3"
# docs
sphinx = "==7.2.6"
myst-parser = "==2.0.0"
sphinx-rtd-theme = "==2.0.0"
sphinx-autobuild = "==2021.3.14"
sphinx-design = "^0.5.0"
sphinx-intl = "^2.2.0"
# debug
bokeh = "^3.3.3"
# test
pytest = "^7.4.3"
pytest-dashboard = "^0.1.2"

[tool.poetry.scripts]
pyfemtet-opt-result-viewer = 'pyfemtet.opt.visualization.result_viewer.application:main'

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning',
]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
