[tool.poetry]
name = "pyfemtet"
version = "0.1.0"  # ignored by versioning plugin
description = "Design parameter optimization using Femtet."
authors = ["kazuma.naito <kazuma.naito@murata.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/pyfemtet/pyfemtet"

[tool.poetry.dependencies]
# core
python = " >= 3.10, < 3.13"
babel = "^2.15.0"
tqdm = "^4.66.1"
colorlog = "^6.8.0"
psutil = "^5.9.6"
# win32 / Femtet
# markers requires ```poetry config installer.re-resolve false```
pywin32 = { version = "^306", markers = "sys_platform=='win32'" }
femtetutils = { version = "^1.0.0", markers = "sys_platform=='win32'" }
# distributed
dask = "~2024.12.1"
distributed = "~2024.12.1"
# ui
dash = "^2.17.0"
plotly = "^5.22.0"
dash-bootstrap-components = "^1.5.0"
# numerical
numpy = "^2.0.0"
pandas = "^2.2.3"
openpyxl = "^3.1.2"
scipy = "^1.11.4"
optuna =  ">=3.4.0, <5.0.0"
optuna-integration = ">=3.6.0, <5.0.0"
botorch = "~0.12.0"
torch = [
    { version = "~2.5.1", source = "pytorch-cpu", markers = "sys_platform=='linux'" },
    { version = "~2.5.1", markers = "sys_platform!='linux'"  },
]
brepmatching = {version = "^0.1.8", optional = true}
fire = "^0.6.0"

[tool.poetry.group.dev.dependencies]
# license
pip-licenses = "^4.3.3"
# docs
sphinx = "==7.2.6"
myst-parser = "==2.0.0"
sphinx-rtd-theme = "==2.0.0"
sphinx-autobuild = "==2021.3.14"
sphinx-design = "==0.5.0"
sphinx-intl = "==2.2.0"
argostranslate = "^1.9.6"
pyperclip = "^1.9.0"
# debug
bokeh = "^3.3.3"
# test
pytest = "^7.4.3"
pytest-dashboard = "^0.1.2"
fire = "^0.6.0"
# others
black = "^25.1.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.extras]
brep = ["brepmatching"]  # pip install pyfemtet[brep]

[tool.poetry.scripts]
pyfemtet-opt-result-viewer = 'pyfemtet.opt.visualization.result_viewer.application:main'

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning',
]
markers = [
    # "example: marks tests as slow (deselect with '-m \"not example\"')",
    "sample",
    "cad",
    "nofem",
    "brep",
    "excel",
]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
