[project]
name = "pyfemtet"
dynamic = ["version"]
description = "Design parameter optimization using Femtet."
authors = [{ name = "kazuma.naito", email = "148934231+pyfemtet@users.noreply.github.com" }]
requires-python = ">= 3.10, < 3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "babel>=2.15.0,<3",
    "tqdm>=4.66.1,<5",
    "colorlog>=6.8.0,<7",
    "psutil>=5.9.6,<6",
    "pywin32<307 ; sys_platform == 'win32' and python_version < '3.13'",
    "pywin32>=309 ; sys_platform == 'win32' and python_version >= '3.13'",
    "femtetutils>=1.0.0,<2 ; sys_platform=='win32'",
    "dask~=2024.12.1",
    "distributed~=2024.12.1",
    "dash>=2.17.0,<3",
    "plotly>=5.22.0,<6",
    "dash-bootstrap-components>=1.5.0,<2",
    "numpy>=2.0.0,<3",
    "pandas>=2.2.3,<3",
    "openpyxl>=3.1.2,<4",
    "scipy>=1.11.4,<2",
    "optuna>=3.4.0, <5.0.0",
    "optuna-integration>=3.6.0, <5.0.0",
    "botorch>=0.12.0, <0.15.0",
    "torch", # botorch specifies torch's version
    "fire>=0.7", # It probably has a strong backward compatibility.
    "pyyaml>=6.0.2,<7",
]

#[project.optional-dependencies]
#brep = ["brepmatching>=0.1.8,<0.2"]

[project.urls]
Repository = "https://github.com/pyfemtet/pyfemtet"

[project.scripts]
pyfemtet-opt-result-viewer = "pyfemtet.opt.visualization.history_viewer.result_viewer._application:result_viewer_main"

[dependency-groups]
dev = [
    "pip-licenses>=4.3.3,<5",
    "sphinx==7.2.6",
    "myst-parser==2.0.0",
    "sphinx-rtd-theme==2.0.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-design==0.5.0",
    "sphinx-intl==2.2.0",
    "bokeh>=3.3.3,<4",
    "black>=25.1.0,<26",
    "pytest>=7.4.3,<8",
    "pytest-dashboard>=2.0.0",
    "pytest-cov>=6.1.1",
    "pytest-reporter-html-dots>=0.11.0",
]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning',
]
markers = [
    "slow",
    "sample",
    "femtet",
    "cad",
    "excel",
    "brep",
    "manual",
    "unmarked",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
